--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
-    "baseUrl": "/Users/jonathan/Documents/code/bed-brokers",
+    "baseUrl": ".",
     "paths": {
       "@components/*": [
         "src/components/*"
@@ -19,7 +19,5 @@
         "src/*"
       ]
     },
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
   }
 }
